<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vikinzi.vikingsyambdventure.activities.GameRulesActivity">

    <android.support.constraint.Guideline
        android:id="@+id/vguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/vguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/hguideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/hguideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <ImageView
        android:id="@+id/imgpapyrus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/papyrus"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        >
    </ImageView>

    <TextView
        android:id="@+id/gamerules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00ffffff"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"
        android:text="@string/game_rules"
        android:textAppearance="@android:style/TextAppearance"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintLeft_toLeftOf="@id/vguideline1"
        app:layout_constraintRight_toRightOf="@id/vguideline2"
        app:layout_constraintBottom_toTopOf="@id/hguideline1"/>

    <!--
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:layout_constraintLeft_toLeftOf="@id/vguideline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/hguideline1"
            app:layout_constraintBottom_toBottomOf="@id/hguideline2">
    -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fadingEdge="none"
        app:layout_constraintBottom_toTopOf="@id/hguideline2"
        app:layout_constraintLeft_toLeftOf="@id/vguideline1"
        app:layout_constraintRight_toRightOf="@id/vguideline2"
        app:layout_constraintTop_toTopOf="@id/hguideline1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/gamerules1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules1"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_ones"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules1"/>

            <TextView
                android:id="@+id/gamerules2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules2"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_max"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules2"/>

            <TextView
                android:id="@+id/gamerules3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules3"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules2"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_min"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules3"/>

            <TextView
                android:id="@+id/gamerules4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules4"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules3"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_straight1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules4"/>

            <ImageView
                android:id="@+id/img_gamerules5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_straight2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules4"/>

            <TextView
                android:id="@+id/gamerules5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules5"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules5"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules66"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_three"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules5"/>

            <TextView
                android:id="@+id/gamerules6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules6"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules66"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_full"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules6"/>

            <TextView
                android:id="@+id/gamerules7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules7"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules6"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_poker"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules7"/>

            <TextView
                android:id="@+id/gamerules8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules8"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules7"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/img_gamerules8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/gamerules_yamb"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gamerules8"/>

            <TextView
                android:id="@+id/gamerules9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:padding="8dp"
                android:text="@string/game_rules9"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_gamerules8"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <!--    </ScrollView> -->
</android.support.constraint.ConstraintLayout>